[package]
name = "rust-demo"
version = "0.1.0"
authors = ["Thomas Bonk <thomas@bonk.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
env_logger = "0.7.1"
actix-files = "0.2.1"
actix-service = "1.0.5"
actix-http = "1.0.1"
futures-util = "0.3.4"
futures = "0.3.4"
pulldown-cmark = "0.7.0"
bytes = "0.5.4"
pin-project = "0.4.8"
